<resources>
    <string name="app_name">MadParking</string>
    <string name="title_home">Home Screen</string>
    <string name="title_home_2">Home</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_settings">Settings</string>
    <string name="title_map">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_date">Pick date</string>
    <string name="calendar_icon">Calendar Icon</string>
    <string name="confirm">Confirm</string>
    <string name="do_you_want_us_to_stop_your_count">Do You Want Us to STOP Your Count?</string>
    <string name="ok">OK</string>
    <string name="state_street_campus_garage">State Street Campus Garage</string>
    <string name="you_parked_at">You parked at:</string>
    <string name="parked_default_price">$0.00</string>
</resources>