<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cs407.madparking.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.cs407.madparking.ui.map.MapsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.cs407.madparking.ui.dashboard.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.cs407.madparking.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_map_setting"
        android:name="com.cs407.madparking.ui.map.MapSetting"
        tools:layout="@layout/mapping_setting" />
</navigation>